--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,8 +28,8 @@ jobs:
         python-version: '3.9'
     - name: Install dependencies
       run: 
-        pip install -r ./code/requirements.txt
+        pip install -r requirements.txt
     - name: Build package
       run: python -m build
     - name: working
-      run: 。/code/run.sh
+      run: run.sh
