--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,7 @@ jobs:
         python-version: '3.7'
     - name: Install dependencies
       run: 
-        pip install -r requirements.txt
+        pip3 install -r requirements.txt
     - name: Build package
       run: python -m build
     - name: working
