--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,4 +31,4 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
     - name: working
-      run: run.sh
+      run: bash run.sh
